# hook

./: CMakeLists.txt  Dockerfile  README.md
monitorHook/: Common.h  InlineHook.cpp  InlineHook.h  Tracker.cpp  Tracker.h
monitoring/: settings.gradle.kts
monitoring/app/: build.gradle.kts
monitoring/app/src/main/: AndroidManifest.xml
monitoring/app/src/main/cpp/: CMakeLists.txt  example.cpp
monitoring/app/src/main/java/com/example/monitoring/: MainActivity.kt
monitoring/app/src/main/res/values/: themes.xml
monitoring/app/src/main/res/values-night/: themes.xml
monitoring/gradle/: libs.versions.toml
monitoring/gradle/wrapper/: gradle-wrapper.properties
monitoringHook/: Common.cpp  GotPlt.cpp  GotPltHook.cpp  Inline.cpp  InlineHook.cpp  Tracker.cpp  inline.cpp
monitoringHook/include/: Common.h  GotPlt.h  GotPltHook.h  Hook.h  Inline.h  InlineHook.h  Tracker.h
monitoringHook/openssl/include/openssl/: configuration.h
